--- a/squid/squid.conf
+++ b/squid/squid.conf
@@ -65,8 +65,8 @@ http_access allow localnet allowed_domains
 http_access deny all
 
 # ── Performance / Privacy ──────────────────────────────────────────────────────
-max_filedesc 4096
-workers 1
+# max_filedesc was removed in Squid 6 — set via ulimit in the container instead
+# workers 1 is the default; omitting it keeps single-process mode
 dns_v4_first on
 
 # Don't expose client IPs to destination servers
