Fix Squid config v2

--- a/squid/squid.conf
+++ b/squid/squid.conf
@@ -30,7 +30,7 @@ maximum_object_size 0 KB
 # ── ACLs ──────────────────────────────────────────────────────────────────────
 
 # Container subnets allowed to use this proxy
-acl localnet src 172.28.0.0/16
+# 172.16.0.0/12 covers 172.16–172.31 (includes both agent-internal and proxy-external)
 acl localnet src 172.16.0.0/12
 acl localnet src 10.0.0.0/8
 acl localnet src 127.0.0.1/32
