--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,11 +63,14 @@ services:
       openclaw-squid:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "curl -sf http://localhost:4000/health || exit 1"]
-      interval: 20s
+      # /health/liveliness checks only that the LiteLLM process is running.
+      # /health (the old endpoint) also pings upstream AI providers, which fails
+      # when Squid is still warming up or when there is API key / network delay.
+      test: ["CMD-SHELL", "curl -sf http://localhost:4000/health/liveliness || exit 1"]
+      interval: 15s
       timeout: 10s
-      retries: 6
-      start_period: 45s
+      retries: 12
+      start_period: 60s
 
   # ── WordPress AI Agent ────────────────────────────────────────────────────
   # Receives tasks, runs agentic loop with the LLM, executes WP-CLI / REST API.
