Squid crash fixes

--- a/squid/squid.conf
+++ b/squid/squid.conf
@@ -64,10 +64,10 @@ http_access allow localnet allowed_domains
 http_access deny all
 
 # ── Performance / Privacy ──────────────────────────────────────────────────────
-# max_filedesc was removed in Squid 6 — set via ulimit in the container instead
-# workers 1 is the default; omitting it keeps single-process mode
-dns_v4_first on
+# dns_v4_first was removed in Squid 6 (no preferential A-record treatment)
+# max_filedesc was removed in Squid 6 (use ulimit at the container level)
+# via off generates a compliance WARNING in Squid 6 — omit to keep logs clean
+# workers 1 is the default single-process mode; no directive needed
 
 # Don't expose client IPs to destination servers
 forwarded_for off
-via off
