--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,10 +63,10 @@ services:
       openclaw-squid:
         condition: service_healthy
     healthcheck:
-      # /health/liveliness checks only that the LiteLLM process is running.
-      # /health (the old endpoint) also pings upstream AI providers, which fails
-      # when Squid is still warming up or when there is API key / network delay.
-      test: ["CMD-SHELL", "curl -sf http://localhost:4000/health/liveliness || exit 1"]
+      # TCP port check: passes as soon as Uvicorn is accepting connections on 4000.
+      # Avoids relying on a specific HTTP endpoint (they differ across LiteLLM versions).
+      # curl without -f succeeds on any HTTP response (2xx, 4xx, 5xx alike).
+      test: ["CMD-SHELL", "curl -s -o /dev/null http://localhost:4000/"]
       interval: 15s
       timeout: 10s
       retries: 12
