--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,10 +63,9 @@ services:
       openclaw-squid:
         condition: service_healthy
     healthcheck:
-      # TCP port check: passes as soon as Uvicorn is accepting connections on 4000.
-      # Avoids relying on a specific HTTP endpoint (they differ across LiteLLM versions).
-      # curl without -f succeeds on any HTTP response (2xx, 4xx, 5xx alike).
-      test: ["CMD-SHELL", "curl -s -o /dev/null http://localhost:4000/"]
+      # Python socket check — works regardless of which HTTP endpoints exist and
+      # does not require curl/wget (absent from the Python slim base image).
+      test: ["CMD-SHELL", "python3 -c 'import socket; s=socket.socket(); s.settimeout(3); s.connect((\"localhost\",4000)); s.close()'"]
       interval: 15s
       timeout: 10s
       retries: 12
