--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,9 +89,13 @@ services:
       # For any tool that downloads from the internet (plugins, images)
       HTTPS_PROXY: "http://openclaw-squid:3128"
       HTTP_PROXY: "http://openclaw-squid:3128"
-      NO_PROXY: "openclaw-litellm,openclaw-squid,openclaw-bot,localhost,127.0.0.1,172.28.0.0/16"
+      NO_PROXY: "openclaw-litellm,openclaw-squid,openclaw-bot,host.docker.internal,localhost,127.0.0.1,172.28.0.0/16"
       SKILL_FILE: "/app/SKILL.md"
       WP_PATH: "/wordpress"
+    extra_hosts:
+      # Resolves to the host machine from inside the container.
+      # Lets WP-CLI reach MariaDB running on the host (DB_HOST=host.docker.internal).
+      - "host.docker.internal:host-gateway"
     volumes:
       # WordPress files (if on same server). Remote-only mode: set WP_PATH="" in .env
       - ${WP_PATH:-/var/www/html}:/wordpress:rw
