--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,6 +90,7 @@ services:
       HTTPS_PROXY: "http://openclaw-squid:3128"
       HTTP_PROXY: "http://openclaw-squid:3128"
       NO_PROXY: "openclaw-litellm,openclaw-squid,openclaw-bot,host.docker.internal,localhost,127.0.0.1,172.28.0.0/16"
+      PYTHONUNBUFFERED: "1"
       SKILL_FILE: "/app/SKILL.md"
       WP_PATH: "/wordpress"
       # Overrides DB_HOST inside the container so WP-CLI can reach the host's MariaDB.
