Internet and media access

--- a/squid/squid.conf
+++ b/squid/squid.conf
@@ -1,17 +1,16 @@
 # Squid Egress Proxy Configuration
 # ─────────────────────────────────────────────────────────────────────────────
-# ALLOWLIST-ONLY: blocks everything except explicitly permitted domains.
+# OPEN INTERNET with SSRF protection.
 #
-# NOTE: We do NOT use ssl_bump (HTTPS content inspection).
-# ssl_bump requires a CA certificate and https_port ssl-bump option.
-# Without those, it crashes Squid on startup.
+# Any public domain is reachable. Private/internal IP ranges are blocked so
+# the agent cannot reach other containers or host services (SSRF protection).
+# Direct IP access is also blocked to force DNS-based hostname resolution.
 #
-# We use plain HTTP CONNECT tunneling instead:
-#   - HTTPS: client sends CONNECT host:443, Squid checks the destination
-#     hostname against the allowlist, and either tunnels or denies it.
-#   - HTTP:  Squid checks the destination domain against the allowlist.
+# allowlist.txt is no longer enforced here but kept as a reference/fallback.
 #
-# This is sufficient: we control WHICH domains are reachable, not the content.
+# We use plain HTTP CONNECT tunneling (no ssl_bump):
+#   - HTTPS: client sends CONNECT host:443, Squid checks ACLs on the hostname.
+#   - HTTP:  Squid checks ACLs on the destination domain.
 # ─────────────────────────────────────────────────────────────────────────────
 
 http_port 3128
@@ -43,31 +42,42 @@ acl Safe_ports port 443
 acl CONNECT method CONNECT
 acl SSL_ports port 443
 
-# Domain allowlist — loaded from mounted file
-acl allowed_domains dstdomain "/etc/squid/allowlist.txt"
+# ── SSRF protection: block private/internal destination IP ranges ──────────────
+# dst matches on the resolved destination IP — catches hostnames that resolve
+# to private addresses (DNS rebinding, internal service names, etc.)
+acl private_dst dst 10.0.0.0/8
+acl private_dst dst 172.16.0.0/12
+acl private_dst dst 192.168.0.0/16
+acl private_dst dst 127.0.0.0/8
+acl private_dst dst 169.254.0.0/16
+acl private_dst dst 100.64.0.0/10
 
-# ── Access rules ───────────────────────────────────────────────────────────────
+# Block bare IPv4 addresses in the request target (e.g. CONNECT 1.2.3.4:443)
+# This catches direct-IP requests that bypass DNS resolution entirely.
+acl direct_ip dstdom_regex ^[0-9]+\.[0-9]+\.[0-9]+\.[0-9]+$
+
+# ── Access rules (order matters — first match wins) ────────────────────────────
 
 # Block non-standard ports
 http_access deny !Safe_ports
 
-# Block CONNECT to non-SSL ports (no tunneling plain TCP on port 80)
+# Block CONNECT to non-SSL ports
 http_access deny CONNECT !SSL_ports
 
 # Deny requests not from our container network
 http_access deny !localnet
 
-# Allow only domains on the allowlist (covers both HTTP GET and CONNECT/HTTPS)
-http_access allow localnet allowed_domains
+# Block SSRF: deny access to private/internal IP ranges
+http_access deny private_dst
 
-# Deny everything else — this is the default anyway, but explicit is better
+# Block direct IP access (force hostname-based requests)
+http_access deny direct_ip
+
+# Allow everything else from our containers
+http_access allow localnet
+
+# Deny anything that somehow slipped through
 http_access deny all
 
 # ── Performance / Privacy ──────────────────────────────────────────────────────
-# dns_v4_first was removed in Squid 6 (no preferential A-record treatment)
-# max_filedesc was removed in Squid 6 (use ulimit at the container level)
-# via off generates a compliance WARNING in Squid 6 — omit to keep logs clean
-# workers 1 is the default single-process mode; no directive needed
-
-# Don't expose client IPs to destination servers
 forwarded_for off
