--- a/squid/squid.conf
+++ b/squid/squid.conf
@@ -52,10 +52,6 @@ acl private_dst dst 127.0.0.0/8
 acl private_dst dst 169.254.0.0/16
 acl private_dst dst 100.64.0.0/10
 
-# Block bare IPv4 addresses in the request target (e.g. CONNECT 1.2.3.4:443)
-# This catches direct-IP requests that bypass DNS resolution entirely.
-acl direct_ip dstdom_regex ^[0-9]+\.[0-9]+\.[0-9]+\.[0-9]+$
-
 # ── Access rules (order matters — first match wins) ────────────────────────────
 
 # Block non-standard ports
@@ -68,10 +64,8 @@ http_access deny CONNECT !SSL_ports
 http_access deny !localnet
 
 # Block SSRF: deny access to private/internal IP ranges
+# (private_dst uses resolved IP, so it also catches hostnames → private IPs)
 http_access deny private_dst
-
-# Block direct IP access (force hostname-based requests)
-http_access deny direct_ip
 
 # Allow everything else from our containers
 http_access allow localnet
