Added new features

--- a/.env.template
+++ b/.env.template
@@ -17,6 +17,11 @@ DEEPSEEK_API_KEY=
 # Google Gemini — get key at https://aistudio.google.com/app/apikey
 GEMINI_API_KEY=
 
+# OpenRouter — access ALL LLMs (Llama, Mistral, Gemma, Qwen, DeepSeek-R1, and more)
+# One key for every model at https://openrouter.ai — get key at https://openrouter.ai/keys
+# Usage: /model openrouter/llama-3.3-70b  or any slug from openrouter.ai/models
+OPENROUTER_API_KEY=
+
 # ── Model Selection ───────────────────────────────────────────────────────────
 # Which model to use by default. Must match a model_name in litellm/config.yaml
 # Options: claude-sonnet-4-6, gpt-4o, deepseek-chat, gemini-2.0-flash
