--- a/litellm/config.yaml
+++ b/litellm/config.yaml
@@ -66,6 +66,35 @@ model_list:
       model: gemini/gemini-2.5-pro-preview-03-25
       api_key: os.environ/GEMINI_API_KEY
 
+  # ── OpenRouter (access to ALL models via one API key) ─────────────────────
+  # Set OPENROUTER_API_KEY in .env. Browse all models at https://openrouter.ai/models
+  # Switch to any model with: /model openrouter/<slug>
+  # Example slugs: openrouter/llama-3.3-70b, openrouter/mistral-large, etc.
+  - model_name: openrouter/llama-3.3-70b
+    litellm_params:
+      model: openrouter/meta-llama/llama-3.3-70b-instruct
+      api_key: os.environ/OPENROUTER_API_KEY
+
+  - model_name: openrouter/mistral-large
+    litellm_params:
+      model: openrouter/mistralai/mistral-large-2411
+      api_key: os.environ/OPENROUTER_API_KEY
+
+  - model_name: openrouter/gemma-3-27b
+    litellm_params:
+      model: openrouter/google/gemma-3-27b-it
+      api_key: os.environ/OPENROUTER_API_KEY
+
+  - model_name: openrouter/qwq-32b
+    litellm_params:
+      model: openrouter/qwen/qwq-32b
+      api_key: os.environ/OPENROUTER_API_KEY
+
+  - model_name: openrouter/deepseek-r1
+    litellm_params:
+      model: openrouter/deepseek/deepseek-r1
+      api_key: os.environ/OPENROUTER_API_KEY
+
 # ─────────────────────────────────────────────────────────────────────────────
 # General settings
 # ─────────────────────────────────────────────────────────────────────────────
