Added auto routing

--- a/.env.template
+++ b/.env.template
@@ -27,8 +27,22 @@ OPENROUTER_API_KEY=
 # Options: claude-sonnet-4-6, gpt-4o, deepseek-chat, gemini-2.0-flash
 DEFAULT_MODEL=claude-sonnet-4-6
 
-# Fallback model if default fails
+# Fallback model if default fails (used automatically when DEFAULT_MODEL errors)
 FALLBACK_MODEL=deepseek-chat
+
+# ── Smart model routing ───────────────────────────────────────────────────────
+# When true, the bot automatically picks the cheapest model that fits each task:
+#   FAST_MODEL   → simple lookups ("show plugins", "check status")   ← cheap
+#   DEFAULT_MODEL → typical tasks (posts, plugins, WooCommerce)       ← balanced
+#   SMART_MODEL  → complex tasks (debug, analyze, multi-step chains)  ← best
+# Use /model <name> in Telegram to override for a session.
+# Use /model auto to re-enable routing after an override.
+AUTO_ROUTING=false
+FAST_MODEL=claude-haiku-4-5
+# SMART_MODEL defaults to DEFAULT_MODEL if not set. Set a more capable model:
+# SMART_MODEL=claude-opus-4-6
+# SMART_MODEL=openrouter/deepseek-r1
+SMART_MODEL=claude-sonnet-4-6
 
 # ── LiteLLM Internal Auth ─────────────────────────────────────────────────────
 # This is the key the agent uses to call LiteLLM (NOT an external API key).
