Switch to typescript

--- a/telegram-bot/Dockerfile
+++ b/telegram-bot/Dockerfile
@@ -1,12 +1,11 @@
-FROM python:3.12-slim
-
-ENV PYTHONUNBUFFERED=1
+FROM node:20-alpine
 
 WORKDIR /app
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+COPY package.json package-lock.json* ./
+RUN npm install
 
-COPY bot.py .
+COPY bot.ts tsconfig.json ./
 
-CMD ["python", "bot.py"]
+# tsx runs TypeScript directly — no separate compile step
+CMD ["node", "node_modules/.bin/tsx", "bot.ts"]
