--- a/squid/squid.conf
+++ b/squid/squid.conf
@@ -1,5 +1,5 @@
 # Squid Egress Proxy Configuration
-# ─────────────────────────────────────────────────────────────────────────────
+# -----------------------------------------------------------------------------
 # OPEN INTERNET with SSRF protection.
 #
 # Any public domain is reachable. Private/internal IP ranges are blocked so
@@ -11,12 +11,12 @@
 # We use plain HTTP CONNECT tunneling (no ssl_bump):
 #   - HTTPS: client sends CONNECT host:443, Squid checks ACLs on the hostname.
 #   - HTTP:  Squid checks ACLs on the destination domain.
-# ─────────────────────────────────────────────────────────────────────────────
+# -----------------------------------------------------------------------------
 
 http_port 3128
 visible_hostname openclaw-squid
 
-# ── Logging ────────────────────────────────────────────────────────────────────
+# --- Logging ------------------------------------------------------------------
 access_log /var/log/squid/access.log squid
 cache_log /dev/null
 logfile_rotate 7
@@ -26,10 +26,10 @@ cache deny all
 cache_mem 8 MB
 maximum_object_size 0 KB
 
-# ── ACLs ──────────────────────────────────────────────────────────────────────
+# --- ACLs --------------------------------------------------------------------
 
 # Container subnets allowed to use this proxy
-# 172.16.0.0/12 covers 172.16–172.31 (includes both agent-internal and proxy-external)
+# 172.16.0.0/12 covers 172.16-172.31 (includes both agent-internal and proxy-external)
 acl localnet src 172.16.0.0/12
 acl localnet src 10.0.0.0/8
 acl localnet src 127.0.0.1/32
@@ -42,8 +42,8 @@ acl Safe_ports port 443
 acl CONNECT method CONNECT
 acl SSL_ports port 443
 
-# ── SSRF protection: block private/internal destination IP ranges ──────────────
-# dst matches on the resolved destination IP — catches hostnames that resolve
+# --- SSRF protection: block private/internal destination IP ranges ------------
+# dst matches on the resolved destination IP -- catches hostnames that resolve
 # to private addresses (DNS rebinding, internal service names, etc.)
 acl private_dst dst 10.0.0.0/8
 acl private_dst dst 172.16.0.0/12
@@ -52,7 +52,7 @@ acl private_dst dst 127.0.0.0/8
 acl private_dst dst 169.254.0.0/16
 acl private_dst dst 100.64.0.0/10
 
-# ── Access rules (order matters — first match wins) ────────────────────────────
+# --- Access rules (order matters - first match wins) -------------------------
 
 # Block non-standard ports
 http_access deny !Safe_ports
@@ -64,7 +64,7 @@ http_access deny CONNECT !SSL_ports
 http_access deny !localnet
 
 # Block SSRF: deny access to private/internal IP ranges
-# (private_dst uses resolved IP, so it also catches hostnames → private IPs)
+# (private_dst uses resolved IP, so it also catches hostnames -> private IPs)
 http_access deny private_dst
 
 # Allow everything else from our containers
@@ -73,5 +73,5 @@ http_access allow localnet
 # Deny anything that somehow slipped through
 http_access deny all
 
-# ── Performance / Privacy ──────────────────────────────────────────────────────
+# --- Performance / Privacy ---------------------------------------------------
 forwarded_for off
