--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -157,7 +157,7 @@ services:
       openclaw-squid:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://localhost:9000/health || exit 1"]
+      test: ["CMD-SHELL", "node -e 'fetch(\"http://localhost:9000/health\").then(r=>{process.exit(r.ok?0:1)}).catch(()=>process.exit(1))'"]
       interval: 20s
       timeout: 10s
       retries: 5
